Made changes to signup.php for validating tags - is working for between 1 - 4 but still issue with success/fail classes overlapping caret

--- a/css/style.css
+++ b/css/style.css
@@ -346,3 +346,7 @@ body {
   font-size: 12px;
   border-radius: 10px;
 }
+
+#bootstrapSelectForm .selectContainer .form-control-feedback {
+    /* Adjust feedback icon position */
+    right: -15px;
